gcp/06-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-server
  namespace: monitoring-prometheus
  labels:
    app: prometheus-server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prometheus-server

  template:
    metadata:
      labels:
        app: prometheus-server

    spec:
      # initContainers:
      #   - name: prometheus-data-permission-setup
      #     image: busybox
      #     command: ["/bin/chmod", "-R", "777", "/prometheus"]
      #     volumeMounts:
      #       - name: prometheus-storage-volume
      #         mountPath: /prometheus

      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: prometheus
          image: prom/prometheus
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus/"
          ports:
            - name: pod-port
              containerPort: 9090
              
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
            - name: prometheus-storage-volume
              mountPath: /prometheus/
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /-/ready
              port: pod-port
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 1
              memory: 1Gi
            limits:
              cpu: 1
              memory: 2Gi
      volumes:
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prometheus-server-conf

        - name: prometheus-storage-volume
          persistentVolumeClaim:
            claimName: prometheus-pvc
