gcp/07-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: monitoring-prometheus
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9090"
    cloud.google.com/neg: '{"ingress": true}'

spec:
  selector:
    app: prometheus-server
  type: NodePort
  ports:
    - name: svc-port
      port: 80
      targetPort: pod-port
      protocol: TCP
